Fix settings page on mobile

--- a/style/component/Card.scss
+++ b/style/component/Card.scss
@@ -97,10 +97,10 @@
 	}
 		
 	@media (max-width: 600px) {
-		overflow: initial;
+		overflow-y: initial;
 		
 		&-content {
-			overflow: initial;
+			overflow-y: initial;
 		}
 	}
 }
